--- a/index.html
+++ b/index.html
@@ -17,19 +17,27 @@
 <link rel="stylesheet" href="./styles/courses.css">
   <title>Sweet Berries Cooking School</title>
 </head>
+
 <body>
 
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">Courses</a></li>
-        <li><a href="#">About us</a></li>
-      </ul>
-    </nav>
-    <img alt="Logo Of Sweet Berries Company" class="logo" src="./images/Logo.png">
+<header>
+  <nav>
+    <ul>
+      <li id="close-li"><i id="close-btn"  class="fa-regular fa-circle-xmark"></i></li>
+      <li><a href="#">Courses</a></li>
+      <li><a href="#">About us</a></li>
+    </ul>
+    
+  </nav>
+  <img alt="Logo Of Sweet Berries Company" class="logo" src="./images/Logo.png">
+  <div class="button-container">
     <button type="button">Get Started</button>
-    <i id="menu" class="fa-solid fa-bars"></i>
-  </header>
+  </div>
+  <i id="menu" class="fa-solid fa-bars"></i>
+  
+</header>
+
+<main>
 
   <section class="hero">
     <div class="hero-text">
@@ -42,11 +50,53 @@
   </section>
 
   <section class="courses-grid">
-
+    <div class="course">
+      <h2>Explore our most popular cooking courses!</h2>
+    </div>
+    <div class="course">
+      <h3>Chef Skills</h3>
+      <p>Master the skills and techniques that will take your culinary abilities to the 
+         next level and help you excel in the food industry.</p>
+      <button type="button">Get started</button>
+      <img class="icon" id="knife" alt="icon of a knife" src="./images/icon-knife.png">
+    </div>
+    <div class="course">
+      <h3>Cooking Essentials</h3>
+      <p>Learn the essential skills and techniques that will lead to a 
+         lifetime of restaurant-quality cooking.</p>
+      <button type="button">Get started</button>
+      <img class="icon" id="pot" alt="icon of a cooking pot" src="./images/icon-pot.png">
+    </div>
+    <div class="course">
+      <h3>Nutrition in Cooking</h3>
+      <p>Master cookery and nutrition skills for health and wellbeing with 
+         this 20-week Accredited Online Nutrition Course.</p>
+      <button type="button">Get started</button>
+      <img class="icon" id="clipboard" alt="icon of a clipboard" src="./images/icon-clipboard.png">
+    </div>
+    <div class="course">
+      <h3>Plant-Based Cooking</h3>
+      <p>Learn the skills and techniques that will lead to a lifetime 
+         of plant-based and planet-friendly meals.</p>
+      <button type="button">Get started</button>
+      <img class="icon" id="plant" alt="icon of a plant" src="./images/icon-plant.png">
+    </div>
+    <div class="course">
+      <h3>Teen’s Kitchen</h3>
+      <p>Teen’s Kitchen is a 6-week immersive and interactive online cookery course 
+         and certificate exclusively for young adults aged 13-18.</p>
+      <button type="button">Get started</button>
+      <img class="icon" id="hamburger" alt="icon of a hamburger" src="./images/icon-hamburger.png">
+    </div>
   </section>
 
-  <footer>
-    <img alt="Logo Of Sweet Berries Company" class="logo" src="./images/Logo.png">
-  </footer>
+</main>
+
+<footer>
+  <img alt="Logo Of Sweet Berries Company" class="logo" src="./images/Logo.png">
+</footer>
+
+<!-- <script src="./app.js"></script> -->
+
 </body>
 </html>
