added responsive navbar | undetermined: behavior of nav on resize

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       <li><a href="#">Courses</a></li>
       <li><a href="#">About us</a></li>
     </ul>
-    
   </nav>
   <img alt="Logo Of Sweet Berries Company" class="logo" src="./images/Logo.png">
   <div class="button-container">
@@ -95,7 +94,7 @@
   <img alt="Logo Of Sweet Berries Company" class="logo" src="./images/Logo.png">
 </footer>
 
-<!-- <script src="./app.js"></script> -->
+<script src="./app.js"></script>
 
 </body>
 </html>
