--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Your HTML has passed the HTML validator but you CSS failed the CSS validator. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +20,7 @@
 </head>
 
 <body>
-
+<!-- Awesome work on not forgetting to use semantic tags! -->
 <header>
   <nav>
     <ul>
@@ -36,7 +37,7 @@
 </header>
 
 <main>
-
+<!-- Good work on your naming for classes. -->
   <section class="hero">
     <div class="hero-text">
       <h1>Discover Your Perfect Online Cooking Course</h1>
